2010-01-12  Adam Barth  <abarth@webkit.org>

        Reviewed by Eric Seidel.

        Add Gustavo and Xan as gtk-ews watchers
        https://bugs.webkit.org/show_bug.cgi?id=33519

        * Scripts/webkitpy/commands/early_warning_system.py:

2010-01-12  Adam Barth  <abarth@webkit.org>

        Reviewed by Eric Seidel.

        webkit-patch shouldn't waste my time for with a component prompt
        https://bugs.webkit.org/show_bug.cgi?id=33521

        The component field isn't very useful for bugs created with
        webkit-patch because they're likely to be resolved quickly.  Instead of
        always prompting for a component, we should just default to the "New
        Bugs" component.  If the bug stays around for more than five minutes,
        we can assign it a proper component.

        * Scripts/webkitpy/bugzilla.py:

2010-01-12  Adam Barth  <abarth@webkit.org>

        Reviewed by Eric Seidel.

        Add experimental "land-safely" command to webkit-patch
        https://bugs.webkit.org/show_bug.cgi?id=33518

        * Scripts/webkitpy/commands/upload.py:
        * Scripts/webkitpy/commands/upload_unittest.py:
        * Scripts/webkitpy/steps/__init__.py:
        * Scripts/webkitpy/steps/postdiffforcommit.py: Added.

2010-01-11  Kevin Ollivier  <kevino@theolliviers.com>

        [wx] Build fix after introduction of JS_NO_EXPORT
        
        * wx/build/settings.py:

2010-01-11  Eric Seidel  <eric@webkit.org>

        No review, rolling out r53079.
        http://trac.webkit.org/changeset/53079
        https://bugs.webkit.org/show_bug.cgi?id=33197

        Adam doens't think this actually works, and believe it caused
        a regression https://bugs.webkit.org/show_bug.cgi?id=33488 so
        rolling this out.

        * Scripts/test-webkitpy:
        * Scripts/webkitpy/commands/abstractdiffcommand.py: Removed.
        * Scripts/webkitpy/commands/abstractdiffcommand_unittest.py: Removed.
        * Scripts/webkitpy/commands/download.py: